// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <a
    className="eOSDpb hCyrKv"
    href="/"
    itemProp="item"
    onClick={null}
    rel="_self"
    size={
      Object {
        "large": "uno",
        "medium": "uno",
        "small": "uno",
      }
    }
    target=""
  >
    Home
  </a>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="kXsNXA eZUnXh"
    href={null}
    itemProp="item"
    onClick={null}
    rel="_self"
    size={
      Object {
        "large": "uno",
        "medium": "uno",
        "small": "uno",
      }
    }
    target=""
  >
    Home
  </span>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;
